--- a/web-client/site/css/style.css
+++ b/web-client/site/css/style.css
@@ -1,15 +1,158 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  font-family: "Nunito", sans-serif;
 }
 
 body {
-  background-color: #d8d8d8;
+  background-color: #e4e0e0;
 }
 
 .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin: 40px;
+  width: 800px;
+  height: 90%;
+  background-color: #4c40f8;
+  border-radius: 40px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-left-decoration, .form-right-decoration {
+  position: absolute;
+  width: 70px;
+  height: 30px;
+  background: #e4e0e0;
+  border-radius: 20px;
+}
+
+.form-left-decoration {
+  bottom: 60px;
+  left: -30px;
+}
+.form-left-decoration::after {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 30px;
+  background-color: #4c40f8;
+  border-radius: 20px;
+  top: 30px;
+  right: 10px;
+}
+.form-left-decoration::before {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 30px;
+  background-color: #4c40f8;
+  border-radius: 20px;
+  bottom: 30px;
+}
+
+.form-right-decoration {
+  top: 80px;
+  right: -30px;
+}
+.form-right-decoration::after {
+  content: "";
+  position: absolute;
+  width: 90px;
+  height: 30px;
+  background-color: #4c40f8;
+  border-radius: 20px;
+  top: 30px;
+}
+.form-right-decoration::before {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 30px;
+  background-color: #4c40f8;
+  border-radius: 20px;
+  bottom: 30px;
+}
+
+.circle {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  background-color: #e4e0e0;
+  border-radius: 100px;
+  top: 0;
+  left: 0;
+  margin: 20px;
+}
+
+.main-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80%;
+  height: 80%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.main-form .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 50px;
+}
+.main-form .info label {
+  font-size: 30px;
+  color: #bcc2f7;
+}
+.main-form .info input {
+  width: 250px;
+  height: 40px;
+  background-color: #e4e0e0;
+  border: 2px solid #bcc2f7;
+  border-radius: 10px;
+}
+.main-form button {
+  background-color: orange;
+  width: 200px;
+  height: 70px;
+  font-size: 40px;
+  font-weight: 800;
+  color: white;
+  border-radius: 20px;
+  border: 1px solid orange;
 }
