--- a/web-client/site/css/style.css
+++ b/web-client/site/css/style.css
@@ -32,7 +32,7 @@ form {
   margin: 40px;
   width: 800px;
   height: 90%;
-  background-color: #4c40f8;
+  background-color: #2ea7ee;
   border-radius: 40px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -59,7 +59,7 @@ form {
   position: absolute;
   width: 110px;
   height: 30px;
-  background-color: #4c40f8;
+  background-color: #2ea7ee;
   border-radius: 20px;
   top: 30px;
   right: 10px;
@@ -69,7 +69,7 @@ form {
   position: absolute;
   width: 70px;
   height: 30px;
-  background-color: #4c40f8;
+  background-color: #2ea7ee;
   border-radius: 20px;
   bottom: 30px;
 }
@@ -83,7 +83,7 @@ form {
   position: absolute;
   width: 90px;
   height: 30px;
-  background-color: #4c40f8;
+  background-color: #2ea7ee;
   border-radius: 20px;
   top: 30px;
 }
@@ -92,7 +92,7 @@ form {
   position: absolute;
   width: 70px;
   height: 30px;
-  background-color: #4c40f8;
+  background-color: #2ea7ee;
   border-radius: 20px;
   bottom: 30px;
 }
@@ -147,12 +147,12 @@ form {
   border-radius: 10px;
 }
 .main-form button {
-  background-color: orange;
+  background-color: #e4e0e0;
   width: 200px;
   height: 70px;
   font-size: 40px;
   font-weight: 800;
-  color: white;
+  color: #2ea7ee;
   border-radius: 20px;
-  border: 1px solid orange;
+  border: 1px solid #e4e0e0;
 }
