--- a/web-client/site/css/style.css
+++ b/web-client/site/css/style.css
@@ -143,8 +143,10 @@ form {
   width: 250px;
   height: 40px;
   background-color: #e4e0e0;
-  border: 2px solid #bcc2f7;
+  border: 3px solid #bcc2f7;
   border-radius: 10px;
+  color: #2ea7ee;
+  font-size: 20px;
 }
 .main-form button {
   background-color: #e4e0e0;
