--- a/web-client/site/scss/style.scss
+++ b/web-client/site/scss/style.scss
@@ -125,8 +125,10 @@ form {
             width: 250px;
             height: 40px;
             background-color: $bg;
-            border: 2px solid $labelcolor;
+            border: 3px solid $labelcolor;
             border-radius: 10px;
+            color: $whiteblue;
+            font-size: 20px;
         }
     }
 
