--- a/web-client/templates/scss/vars.scss
+++ b/web-client/templates/scss/vars.scss
@@ -1,6 +1,14 @@
 $bg: #e4e0e0;
 
-$whiteblue: #2ea7ee; ;
+$whiteblue: #2ea7ee; 
 $decoritem: #ff0000;
 $labelcolor: #bcc2f7;
 $btncolor: #e4e0e0;
+
+$chatsblock: #ccd2db;
+$red: #ee2e68;
+// $text: #a5cdf3;
+$bgsidebar: #3b18c5;
+$text: #fff;
+$chat: #2e67bc;
+$msginfo: #8fabd6;
