--- a/web-client/templates/css/style.css
+++ b/web-client/templates/css/style.css
@@ -6,6 +6,22 @@
   font-family: "Nunito", sans-serif;
 }
 
+.__center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.__row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 body {
   background-color: #e4e0e0;
 }
@@ -16,12 +32,6 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 form {
@@ -40,6 +50,153 @@ form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.main-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80%;
+  height: 80%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.main-form .setinfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 50px;
+}
+.main-form .setinfo label {
+  font-size: 30px;
+  color: #bcc2f7;
+}
+.main-form .setinfo input {
+  width: 250px;
+  height: 40px;
+  background-color: #e4e0e0;
+  border: 3px solid #bcc2f7;
+  border-radius: 10px;
+  color: #2ea7ee;
+  font-size: 20px;
+}
+.main-form button {
+  background-color: #e4e0e0;
+  width: 200px;
+  height: 70px;
+  font-size: 40px;
+  font-weight: 800;
+  color: #2ea7ee;
+  border-radius: 20px;
+  border: 1px solid #e4e0e0;
+}
+
+.sidebar {
+  width: 30%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10px;
+  background-color: #3b18c5;
+  margin-right: 30px;
+  overflow: auto;
+  direction: rtl;
+  scrollbar-width: auto; /* for Firefox */
+  scrollbar-color: #3b18c5 white; /* for Firefox */
+}
+.sidebar ::-webkit-scrollbar {
+  width: 40px;
+}
+.sidebar .nochat {
+  width: 100%;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ee2e68;
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.sidebar .chat {
+  cursor: pointer;
+  direction: ltr;
+  width: 100%;
+  height: 80px;
+  background-color: #2e67bc;
+  border-radius: 10px;
+  border: 1px solid #2e67bc;
+  color: white;
+  font-size: 20px;
+  margin-bottom: 10px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.sidebar .chat:hover {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  margin-right: -10px;
+  border: 1px solid white;
+  height: 90px;
+}
+.sidebar .chat .user-info {
+  width: 90%;
+  height: 100%;
+  margin-left: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #fff;
+}
+.sidebar .chat .user-info .name {
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+.sidebar .chat .user-info .last-msg {
+  width: 200px;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+}
+
+.chats {
+  width: 70%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ccd2db;
 }
 
 .form-left-decoration, .form-right-decoration {
@@ -106,55 +263,4 @@ form {
   top: 0;
   left: 0;
   margin: 20px;
-}
-
-.main-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 80%;
-  height: 80%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.main-form .info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 50px;
-}
-.main-form .info label {
-  font-size: 30px;
-  color: #bcc2f7;
-}
-.main-form .info input {
-  width: 250px;
-  height: 40px;
-  background-color: #e4e0e0;
-  border: 3px solid #bcc2f7;
-  border-radius: 10px;
-  color: #2ea7ee;
-  font-size: 20px;
-}
-.main-form button {
-  background-color: #e4e0e0;
-  width: 200px;
-  height: 70px;
-  font-size: 40px;
-  font-weight: 800;
-  color: #2ea7ee;
-  border-radius: 20px;
-  border: 1px solid #e4e0e0;
 }
