--- a/web-client/templates/scss/vars.scss
+++ b/web-client/templates/scss/vars.scss
@@ -5,10 +5,12 @@ $decoritem: #ff0000;
 $labelcolor: #bcc2f7;
 $btncolor: #e4e0e0;
 
-$chatsblock: #ccd2db;
+$messangerblock: #ccd2db;
 $red: #ee2e68;
 // $text: #a5cdf3;
-$bgsidebar: #3b18c5;
+$bgsidebar: #482faa;
 $text: #fff;
 $chat: #2e67bc;
 $msginfo: #8fabd6;
+
+$mainchat: #1b92c9;
