--- a/web-client/templates/scss/style.scss
+++ b/web-client/templates/scss/style.scss
@@ -5,7 +5,7 @@
     padding: 0;
     text-decoration: none;
     font-family: "Nunito", sans-serif;
-    // overflow-x: hidden;
+
 }
 
 .__center {
@@ -25,34 +25,50 @@ body {
     background-color: $bg;
 }
 
+.__me {
+    background-color: #123422;
+    border: 2px solid blue;
+}
+
+.__other {
+    background-color: lemonchiffon;
+    border: 2px solid #beb0b0;
+
+    border-radius: 20px;
+    border-bottom-left-radius: 0px;
+}
+
 .wrapper {
-    display: flex;
     width: 100vw;
     height: 100vh;
+    display: flex;
     
 }
 
 form {
-    display: flex;
-    position: relative;
-    margin: 40px;
     width: 800px;
     height: 90%;
-    background-color: $whiteblue;
-    border-radius: 40px;
+
+    position: relative;
+    display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: $whiteblue;
+    border-radius: 40px;
+
+    margin: 40px;
 }
 
  .main-form {
-    display: flex;
-    flex-direction: column;
     width: 80%;
     height: 80%;
 
+    display: flex;
     justify-content: center;
     align-items: center;
 
+    flex-direction: column;
 
     .setinfo {
         display: flex;
@@ -68,21 +84,30 @@ form {
         input {
             width: 250px;
             height: 40px;
+
+            outline: none !important;
+
             background-color: $bg;
+
             border: 3px solid $labelcolor;
             border-radius: 10px;
+
             color: $whiteblue;
             font-size: 20px;
         }
     }
 
     button {
-        background-color: $btncolor;
         width: 200px;
         height: 70px;
+
         font-size: 40px;
         font-weight: 800;
+        
         color: $whiteblue;
+        
+        background-color: $btncolor;
+
         border-radius: 20px;
         border: 1px solid $btncolor;
     }
@@ -109,8 +134,8 @@ form {
 
     overflow-x: hidden;
 
-    scrollbar-width: auto; /* for Firefox */
-    scrollbar-color: $bgsidebar white; /* for Firefox */
+    scrollbar-width: auto; 
+    scrollbar-color: $bgsidebar white; 
     
     ::-webkit-scrollbar {
         width: 40px;
@@ -134,12 +159,12 @@ form {
         margin-bottom: 10px;
     }
 
-    .chat {
-                    
-        cursor: pointer;
+    .chat { 
         direction: ltr;
         width: 100%;
         height: 80px;
+
+        cursor: pointer;
 
         display: flex;
         flex-direction: row;
@@ -148,8 +173,10 @@ form {
         background-color: $chat;
         border-radius: 10px;
         border: 1px solid $chat;
+
         color: white;
         font-size: 20px;
+
         margin-bottom: 10px;
 
         transition: all .5s;
@@ -157,10 +184,12 @@ form {
         &:hover {    
             transition: all .5s;
 
-            margin-right: -10px;
-            border: 1px solid white;
             height: 90px;
+            border: 1px solid white;
+
+            margin-right: -10px;
         }
+
 
         .user-info {
 
@@ -168,23 +197,27 @@ form {
             height: 100%;
 
             position: relative;
+            flex-direction: column;
             margin-left: 10px;
     
-            flex-direction: column;
-            
             color: $text;
+    
             .name {
-                margin-bottom: 10px;
                 font-weight: 700;
+                margin-bottom: 10px;
             }
+
             .last-msg {
                 width: 200px;
                 padding: 10px;
+
                 white-space: nowrap;
                 overflow: hidden;
-                text-overflow: ellipsis;
-                background-color: rgba(0, 0, 0, 0.2);
                 font-size: 14px;
+                text-overflow: ellipsis;
+
+                background-color: rgba(0, 0, 0, 0.2);
+
             }
 
 
@@ -193,6 +226,7 @@ form {
         .new-msg {
             width: 25px;
             height: 25px;
+
             background-color: white;
             border-radius: 50%;
         }
@@ -209,6 +243,7 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
+
     background-color: $messangerblock;
 
     
@@ -225,48 +260,116 @@ form {
 
         margin: 20px;
 
-        .msgs {
-            width: 100%;
-            height: 90%;
-            
-            border-radius: 20px;
-            
-            background-color: darken(lightcyan, 45%);
 
-
-        }
-
-        .msg-input {
+        .send-message {
             display: flex;
             flex-direction: row;
+            align-items: center;
+
             margin-top: 10px;
 
-            .send-message {
+            .input-message {
+                outline: none !important;
+                resize: none;
+
                 margin-top: auto;
                 width: 90%;
                 height: 60px;
              
                 border: 1px solid $mainchat;
-                border-radius: 20px;
-    
+                border-radius: 10px;
+                
+                scrollbar-width: thin; 
+                scrollbar-color: $bgsidebar white; 
+
                 background-color: $mainchat;     
                 
                 color: white;
-                padding: 5px;
+                padding: 10px;
                 font-size: 20px;
     
             }
     
             button {
+                width: 70px;
+                height: 70px;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
                 margin-left: 20px;
-                flex: auto;
+
+                color: black;
+                font-size: 40px;
+                font-weight: 900;
+
                 background-color: white;
-                border-radius: 50%;
+                border: 1px solid white;
+                border-radius: 30px;
+
+                &:active {
+                    background-color: darken(white, 20%);
+                    border: 1px solid darken(white, 20%);
+                    color: $whiteblue;
+                }
             }
         }
 
     }
+}
+
+// sms
+
+
+.msgs {
+            
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    
+    border-radius: 10px;
+
+    background-color: darken(lightcyan, 45%);
+
+    .me-message {
+        width: 50%;
+        height: 100%;
+        
+        display: flex;
+        flex-direction: column;
+
+        margin-left: auto;
+       
+        border: 2px solid red;
+        padding: 5px;
+    }
+    .other-message {
+        width: 50%;
+        height: 100%;
+        
+        display: flex;
+        flex-direction: column;
+
+        margin-right: auto;
+        border: 2px solid green;
+        padding: 5px;
+    }
+
+    .message {
+        width: 90%;
+  
+        min-height: 50px;
+        overflow: hidden;
+   
+        font-size: 16px;
+        font-weight: 500;
+
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+
 }
 
 
