--- a/web-client/templates/css/style.css
+++ b/web-client/templates/css/style.css
@@ -31,15 +31,19 @@ body {
 }
 
 .__me {
-  background-color: #123422;
-  border: 2px solid blue;
-}
-
-.__other {
   background-color: lemonchiffon;
   border: 2px solid #beb0b0;
   border-radius: 20px;
+  border-bottom-right-radius: 0px;
+  margin-left: auto;
+}
+
+.__other {
+  background-color: #6ea5e4;
+  border: 2px solid #3369dd;
+  border-radius: 20px;
   border-bottom-left-radius: 0px;
+  margin-right: auto;
 }
 
 .wrapper {
@@ -236,16 +240,14 @@ form {
 .messanger .main {
   width: 90%;
   height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #2ea7ee;
   border-radius: 20px;
-  padding: 10px;
+  padding: 20px;
   margin: 20px;
 }
 .messanger .main .send-message {
@@ -303,46 +305,21 @@ form {
 }
 
 .msgs {
-  width: 100%;
   height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border-radius: 10px;
+  overflow-y: auto;
   background-color: #00fafa;
-}
-.msgs .me-message {
-  width: 50%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: auto;
-  border: 2px solid red;
-  padding: 5px;
-}
-.msgs .other-message {
-  width: 50%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-right: auto;
-  border: 2px solid green;
-  padding: 5px;
+  padding: 10px;
 }
 .msgs .message {
-  width: 90%;
-  min-height: 50px;
-  overflow: hidden;
+  width: 46%;
   font-size: 16px;
   font-weight: 500;
   padding: 10px;
