--- a/web-client/templates/scss/vars.scss
+++ b/web-client/templates/scss/vars.scss
@@ -5,12 +5,21 @@ $decoritem: #ff0000;
 $labelcolor: #bcc2f7;
 $btncolor: #e4e0e0;
 
-$messangerblock: #ccd2db;
 $red: #ee2e68;
-// $text: #a5cdf3;
-$bgsidebar: #482faa;
-$text: #fff;
-$chat: #2e67bc;
-$msginfo: #8fabd6;
 
-$mainchat: #1b92c9;
+$bgsidebar: #59ade6;
+$text: #fff;
+$chat: #5c8cd4;
+$lastmsg: #4ebeb0;
+
+$maincolor: #59abee;
+$chatbg: rgb(163, 207, 228);
+$msginfo: #8fabd6;
+$inputmsg: #458ad8;
+
+$mebg: #ffffff;
+$mebor: darken($mebg, 30%);
+
+$otherbg: #83f3ae;
+$otherbor: darken($mebg, 35%);
+
