--- a/web-client/templates/css/adapt.css
+++ b/web-client/templates/css/adapt.css
@@ -69,8 +69,8 @@
     display: -ms-flexbox;
     display: flex;
   }
-  .main {
-    height: 100%;
+  .messanger .main {
+    padding: 10px;
     display: none;
   }
   .sidebar .chat .new-msg {
@@ -113,6 +113,23 @@
   .msgs .message {
     width: 60%;
   }
+  .__close {
+    width: 9%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .__open {
+    width: 91%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .__smallname {
+    font-size: 10px;
+    white-space: pre-line;
+  }
+  .messanger .main {
+    width: 95%;
+  }
 }
 @media only screen and (max-width: 790px) {
   form {
@@ -121,6 +138,22 @@
   }
   .main-form .setinfo input {
     width: 220px;
+  }
+}
+@media only screen and (max-width: 745px) {
+  .__close {
+    width: 7%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .__open {
+    width: 95%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .__smallname {
+    font-size: 8px;
+    white-space: pre-line;
   }
 }
 @media only screen and (max-width: 665px) {
@@ -135,6 +168,23 @@
     left: -20px;
     width: 70px;
   }
+  .msgs .message {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 635px) {
+  .__smallname {
+    display: none;
+  }
+  .__close {
+    width: 4%;
+  }
+  .__open {
+    width: 97%;
+  }
+  .navpanel {
+    margin-right: -12px;
+  }
 }
 @media only screen and (max-width: 585px) {
   form {
@@ -148,6 +198,9 @@
     width: 140px;
     height: 50px;
     font-size: 20px;
+  }
+  .msgs .message {
+    width: 80%;
   }
 }
 @media only screen and (max-width: 505px) {
