--- a/web-client/templates/css/style.css
+++ b/web-client/templates/css/style.css
@@ -248,9 +248,7 @@ form {
 .messanger .main {
   width: 90%;
   height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
