--- a/web-client/templates/scss/style.scss
+++ b/web-client/templates/scss/style.scss
@@ -267,7 +267,7 @@ form {
         width: 90%;
         height: 90%;
 
-        display: flex;
+        display: none;
         flex-direction: column;
 
         background-color: $maincolor;
