--- a/web-client/templates/css/style.css
+++ b/web-client/templates/css/style.css
@@ -30,6 +30,7 @@
   display: none;
 }
 
+/* наше сообщение */
 .__me {
   background-color: #ffffff;
   border: 2px solid #b3b3b3;
@@ -38,6 +39,7 @@
   margin-left: auto;
 }
 
+/* чужое сообщение */
 .__other {
   background-color: #83f3ae;
   border: 2px solid #a6a6a6;
@@ -46,6 +48,9 @@
   margin-right: auto;
 }
 
+/* Блок для адаптации
+   Появляется при width 885  и меньше
+*/
 .null {
   display: none;
   height: 50px;
@@ -62,6 +67,8 @@ body {
   display: -ms-flexbox;
   display: flex;
 }
+
+/* index.html */
 
 form {
   width: 800px;
@@ -133,6 +140,10 @@ form {
   border: 1px solid #e4e0e0;
 }
 
+
+/* chats.html */ 
+
+/* Левая панель  */
 .sidebar {
   width: 30%;
   -webkit-box-orient: vertical;
@@ -143,14 +154,15 @@ form {
   background-color: #59ade6;
   margin-right: 30px;
   overflow: auto;
-  direction: rtl;
-  overflow-x: hidden;
+  direction: rtl;       /* отпражаем её, чтоб скролл был слева  */
+  overflow-x: hidden;   /* убираем нижний скролл  */
   scrollbar-width: auto;
   scrollbar-color: #59ade6 white;
 }
 .sidebar ::-webkit-scrollbar {
   width: 40px;
 }
+/* Стили для .nochat */
 .sidebar .nochat {
   width: 100%;
   height: 70px;
@@ -170,8 +182,10 @@ form {
   font-weight: 700;
   margin-bottom: 10px;
 }
+
+/* стили для .chat */
 .sidebar .chat {
-  direction: ltr;
+  direction: ltr; /* Отражаем содержимое чтоб оно небыло отзеркалено из-за rtl в .sidebar*/
   width: 100%;
   height: 80px;
   cursor: pointer;
@@ -194,6 +208,8 @@ form {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
+
+/* стили при наведении на .chat */
 .sidebar .chat:hover {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -201,6 +217,8 @@ form {
   border: 1px solid white;
   margin-right: -10px;
 }
+
+/* стили .user-info */
 .sidebar .chat .user-info {
   width: 90%;
   height: 100%;
@@ -212,10 +230,14 @@ form {
   margin-left: 10px;
   color: #fff;
 }
+
+/* стили .name */
 .sidebar .chat .user-info .name {
   font-weight: 700;
   margin-bottom: 10px;
 }
+
+/* стили .last-msg */
 .sidebar .chat .user-info .last-msg {
   width: 200px;
   padding: 10px;
@@ -225,6 +247,8 @@ form {
   text-overflow: ellipsis;
   background-color: #4ebeb0;
 }
+
+/* Стили кружоча .new-msg */
 .sidebar .chat .new-msg {
   width: 25px;
   height: 25px;
@@ -232,6 +256,7 @@ form {
   border-radius: 50%;
 }
 
+/* Стили правой части сайта */
 .messanger {
   width: 70%;
   height: 100%;
@@ -245,6 +270,8 @@ form {
       -ms-flex-align: center;
           align-items: center;
 }
+
+/* Стили блока с чатом */
 .messanger .main {
   width: 90%;
   height: 90%;
@@ -258,6 +285,8 @@ form {
   padding: 20px;
   margin: 20px;
 }
+
+/* Стили с блоком ввода текста и кнопкой  */
 .messanger .main .send-message {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -271,8 +300,9 @@ form {
           align-items: center;
   margin-top: 10px;
 }
+/* стили ввода текста .input-messange  */
 .messanger .main .send-message .input-message {
-  outline: none !important;
+  outline: none !important; /* убираем обводку браузера при вводе текста*/
   resize: none;
   margin-top: auto;
   width: 90%;
@@ -286,6 +316,8 @@ form {
   padding: 10px;
   font-size: 20px;
 }
+
+/* кнопка отправки сообщения */
 .messanger .main .send-message button {
   width: 70px;
   height: 70px;
@@ -306,12 +338,14 @@ form {
   border: 1px solid white;
   border-radius: 30px;
 }
+/* стили кнопки отправки при её нажатии */
 .messanger .main .send-message button:active {
   background-color: #cccccc;
   border: 1px solid #cccccc;
   color: #2ea7ee;
 }
 
+/* блок со сообщениями  */
 .msgs {
   height: 90%;
   display: -webkit-box;
@@ -326,6 +360,9 @@ form {
   background-color: rgb(163, 207, 228);
   padding: 10px;
 }
+/* стили для самих сообщений
+   конкретные стилии для сообщений .__me и .__other - они в самом верху
+*/
 .msgs .message {
   width: 46%;
   font-size: 16px;
@@ -334,6 +371,7 @@ form {
   margin-bottom: 10px;
 }
 
+/* стили декоративных блоков в index.html */
 .form-left-decoration, .form-right-decoration {
   position: absolute;
   width: 70px;
@@ -400,6 +438,7 @@ form {
   margin: 20px;
 }
 
+/* стили панели навигации, появляется во время адаптации */
 .navpanel {
   display: none;
   width: 100%;
@@ -407,6 +446,7 @@ form {
   margin-bottom: 20px;
   background-color: #0084ff;
 }
+/* стили стрелки панели */
 .navpanel .arrow {
   display: none;
 }
